src/com/intertechitalia/ips2/core/IPSParser.java
// Generated from C:/Users/nikko31/Desktop/IPSProj/src/com/intertechitalia/ips2/core\IPS.g4 by ANTLR 4.4.1-dev

package com.intertechitalia.ips2.core;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IPSParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4.1-dev", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__2=1, T__1=2, T__0=3, AggOr=4, ScaG2=5, Effettive=6, ModOr=7, Giorno=8, 
		Mese=9, ValPa=10, DurG1=11, DurG2=12, DO=13, END=14, Salta=15, Println=16, 
		Print=17, If=18, Else=19, Null=20, Or=21, And=22, Equals=23, NEquals=24, 
		GTEquals=25, LTEquals=26, Pow=27, Excl=28, GT=29, LT=30, Add=31, Subtract=32, 
		Multiply=33, Divide=34, Modulus=35, OBrace=36, CBrace=37, OBracket=38, 
		CBracket=39, OParen=40, CParen=41, Assign=42, Colon=43, Per=44, Bool=45, 
		Days=46, Months=47, Identifier=48, Number=49, String=50, Comment=51, Space=52;
	public static final String[] tokenNames = {
		"<INVALID>", "','", "'Arr'", "'Interrompi'", "'AggOr'", "'ScaG2'", "'Effettive'", 
		"'ModOr'", "'Giorno'", "'Mese'", "'ValPa'", "'DurG1'", "'DurG2'", "'Fai'", 
		"';'", "'Salta'", "'ScriviACapo'", "'Scrivi'", "'Se'", "'Oppure'", "'null'", 
		"'O'", "'E'", "'=='", "'<>'", "'>='", "'<='", "'^'", "'!'", "'>'", "'<'", 
		"'+'", "'-'", "'*'", "'/'", "'%'", "'{'", "'}'", "'['", "']'", "'('", 
		"')'", "'='", "':'", "'Per'", "Bool", "Days", "Months", "Identifier", 
		"Number", "String", "Comment", "Space"
	};
	public static final int
		RULE_parse = 0, RULE_megablock = 1, RULE_block = 2, RULE_ifStatement = 3, 
		RULE_ifStat = 4, RULE_elseStat = 5, RULE_statement = 6, RULE_functionCall = 7, 
		RULE_funcCall = 8, RULE_saltaCall = 9, RULE_interrompiCall = 10, RULE_exprList = 11, 
		RULE_assign = 12, RULE_expr = 13;
	public static final String[] ruleNames = {
		"parse", "megablock", "block", "ifStatement", "ifStat", "elseStat", "statement", 
		"functionCall", "funcCall", "saltaCall", "interrompiCall", "exprList", 
		"assign", "expr"
	};

	@Override
	public String getGrammarFileName() { return "IPS.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IPSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(IPSParser.EOF, 0); }
		public MegablockContext megablock() {
			return getRuleContext(MegablockContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(28); megablock();
			setState(29); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MegablockContext extends ParserRuleContext {
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public MegablockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_megablock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterMegablock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitMegablock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitMegablock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MegablockContext megablock() throws RecognitionException {
		MegablockContext _localctx = new MegablockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_megablock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(31); block();
				}
				}
				setState(34); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DO) | (1L << If) | (1L << Per))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public TerminalNode DO() { return getToken(IPSParser.DO, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode END() { return getToken(IPSParser.END, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			setState(48);
			switch (_input.LA(1)) {
			case DO:
				enterOuterAlt(_localctx, 1);
				{
				setState(36); match(DO);
				setState(37); statement();
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(38); match(T__2);
					setState(39); statement();
					}
					}
					setState(44);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(45); match(END);
				}
				break;
			case If:
			case Per:
				enterOuterAlt(_localctx, 2);
				{
				setState(47); ifStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public ElseStatContext elseStat() {
			return getRuleContext(ElseStatContext.class,0);
		}
		public IfStatContext ifStat() {
			return getRuleContext(IfStatContext.class,0);
		}
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterIfStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitIfStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitIfStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(50); ifStat();
			setState(52);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(51); elseStat();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode If() { return getToken(IPSParser.If, 0); }
		public TerminalNode Per() { return getToken(IPSParser.Per, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public IfStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterIfStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitIfStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitIfStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatContext ifStat() throws RecognitionException {
		IfStatContext _localctx = new IfStatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_ifStat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			_la = _input.LA(1);
			if ( !(_la==If || _la==Per) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			setState(55); expr(0);
			setState(56); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseStatContext extends ParserRuleContext {
		public TerminalNode Else() { return getToken(IPSParser.Else, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ElseStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseStat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterElseStat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitElseStat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitElseStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ElseStatContext elseStat() throws RecognitionException {
		ElseStatContext _localctx = new ElseStatContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_elseStat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58); match(Else);
			setState(59); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public SaltaCallContext saltaCall() {
			return getRuleContext(SaltaCallContext.class,0);
		}
		public FunctionCallContext functionCall() {
			return getRuleContext(FunctionCallContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public InterrompiCallContext interrompiCall() {
			return getRuleContext(InterrompiCallContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(65);
			switch (_input.LA(1)) {
			case AggOr:
			case ScaG2:
			case Effettive:
			case ModOr:
			case Giorno:
			case Mese:
			case ValPa:
			case DurG1:
			case DurG2:
			case Println:
			case Print:
				enterOuterAlt(_localctx, 1);
				{
				setState(61); functionCall();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 2);
				{
				setState(62); assign();
				}
				break;
			case Salta:
				enterOuterAlt(_localctx, 3);
				{
				setState(63); saltaCall();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 4);
				{
				setState(64); interrompiCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallContext extends ParserRuleContext {
		public FuncCallContext funcCall() {
			return getRuleContext(FuncCallContext.class,0);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallContext functionCall() throws RecognitionException {
		FunctionCallContext _localctx = new FunctionCallContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_functionCall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); funcCall();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncCallContext extends ParserRuleContext {
		public FuncCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcCall; }
	 
		public FuncCallContext() { }
		public void copyFrom(FuncCallContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Giorno1FunctionCallContext extends FuncCallContext {
		public TerminalNode Giorno() { return getToken(IPSParser.Giorno, 0); }
		public Giorno1FunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterGiorno1FunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitGiorno1FunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitGiorno1FunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Mese1FunctionCallContext extends FuncCallContext {
		public TerminalNode Mese() { return getToken(IPSParser.Mese, 0); }
		public Mese1FunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterMese1FunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitMese1FunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitMese1FunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintlnFunctionCallContext extends FuncCallContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Println() { return getToken(IPSParser.Println, 0); }
		public PrintlnFunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterPrintlnFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitPrintlnFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitPrintlnFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ValpaFunctionCallContext extends FuncCallContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode ValPa() { return getToken(IPSParser.ValPa, 0); }
		public ValpaFunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterValpaFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitValpaFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitValpaFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EffettiveFunctionCallContext extends FuncCallContext {
		public TerminalNode Effettive() { return getToken(IPSParser.Effettive, 0); }
		public EffettiveFunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterEffettiveFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitEffettiveFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitEffettiveFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintFunctionCallContext extends FuncCallContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode Print() { return getToken(IPSParser.Print, 0); }
		public PrintFunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterPrintFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitPrintFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitPrintFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AggorFunctionCallContext extends FuncCallContext {
		public TerminalNode AggOr() { return getToken(IPSParser.AggOr, 0); }
		public ExprListContext exprList() {
			return getRuleContext(ExprListContext.class,0);
		}
		public AggorFunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterAggorFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitAggorFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitAggorFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Durg2FunctionCallContext extends FuncCallContext {
		public TerminalNode DurG2() { return getToken(IPSParser.DurG2, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Durg2FunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterDurg2FunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitDurg2FunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitDurg2FunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Scag2FunctionCallContext extends FuncCallContext {
		public TerminalNode ScaG2() { return getToken(IPSParser.ScaG2, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Scag2FunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterScag2FunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitScag2FunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitScag2FunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Durg1FunctionCallContext extends FuncCallContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode DurG1() { return getToken(IPSParser.DurG1, 0); }
		public Durg1FunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterDurg1FunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitDurg1FunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitDurg1FunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ModorFunctionCallContext extends FuncCallContext {
		public TerminalNode ModOr() { return getToken(IPSParser.ModOr, 0); }
		public ModorFunctionCallContext(FuncCallContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).enterModorFunctionCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IPSListener ) ((IPSListener)listener).exitModorFunctionCall(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IPSVisitor ) return ((IPSVisitor<? extends T>)visitor).visitModorFunctionCall(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncCallContext funcCall() throws RecognitionException {
		FuncCallContext _localctx = new FuncCallContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_funcCall);
		int _la;
		try {
			setState(109);
			switch (_input.LA(1)) {
			case Println:
				_localctx = new PrintlnFunctionCallContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(69); match(Println);
				setState(70); match(OParen);
				setState(72);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AggOr) | (1L << ScaG2) | (1L << Effettive) | (1L << ModOr) | (1L << Giorno) | (1L << Mese) | (1L << ValPa) | (1L << DurG1) | (1L << DurG2) | (1L << Println) | (1L << Print) | (1L << Null) | (1L << Excl) | (1L << Subtract) | (1L << OParen) | (1L << Bool) | (1L << Identifier) | (1L << Number) | (1L << String))) != 0)) {
					{
					setState(71); expr(0);
					}
				}
